# DatBot

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
DatBot/: AsioDevice.cpp  AsioDevice.hpp  CMakeLists.txt  DatBot.cpp  DatBot.h  DeviceBase.hpp  datbot.conf
DatBot/Bot/: Config.cpp  Config.hpp  ConfigImpl.hpp  IrcBot.cpp  IrcBot.hpp
DatBot/Irc/: ChannelManager.cpp  ChannelManager.hpp  Session.cpp  Session.hpp
DatBot/Irc/Models/: Channel.hpp  Events.hpp  Message.cpp  Message.hpp
DatBot/Irc/Parsers/: MessageParser.cpp  MessageParser.hpp
DatBot/Net/: AsioDevice.cpp  AsioDevice.hpp  DeviceBase.hpp  DeviceBaseImpl.hpp
